ADD_SUBDIRECTORY(DisplayModel)
ADD_SUBDIRECTORY(DisplayImage)
ADD_SUBDIRECTORY(DisplayShadowTest)
ADD_SUBDIRECTORY(ModelViewer)
ADD_SUBDIRECTORY(ModelPhysics)

FIND_PACKAGE( PNG QUIET )
IF(PNG_FOUND)
  ADD_SUBDIRECTORY(OffscreenRender)
ENDIF()

FIND_PACKAGE( MVL QUIET )
IF( MVL_FOUND )
  ADD_SUBDIRECTORY(SimCam)
ENDIF()
