ADD_SUBDIRECTORY(Display)
ADD_SUBDIRECTORY(DisplayImage)
ADD_SUBDIRECTORY(DisplayMultiView)

if(NOT _ANDROID_)
    ADD_SUBDIRECTORY(DisplayShadowTest)
    ADD_SUBDIRECTORY(ModelPhysics)
    ADD_SUBDIRECTORY(Widgets)
    ADD_SUBDIRECTORY(ModelViewer)

    FIND_PACKAGE( PNG QUIET )
    IF(PNG_FOUND)
      ADD_SUBDIRECTORY(OffscreenRender)
    ENDIF()

    FIND_PACKAGE( MVL QUIET )
    IF( MVL_FOUND )
      ADD_SUBDIRECTORY(SimCam)
    ENDIF()

    FIND_PACKAGE( ModelGraph QUIET )
    IF( ModelGraph_FOUND )
        ADD_SUBDIRECTORY(ConstraintDemo)
    ENDIF()
endif()
