# Find Pangolin (https://github.com/stevenlovegrove/Pangolin)
FIND_PACKAGE(Pangolin REQUIRED)
INCLUDE_DIRECTORIES(${Pangolin_INCLUDE_DIRS})
LINK_DIRECTORIES(${Pangolin_LIBRARY_DIRS})
LINK_LIBRARIES(${Pangolin_LIBRARIES})

MESSAGE(STATUS "HERE")

FIND_PACKAGE(FREEGLUT)

IF(FREEGLUT_FOUND)
  INCLUDE_DIRECTORIES(${FREEGLUT_INCLUDE_DIR} )
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} )
  ADD_EXECUTABLE(SimpleDisplay main.cpp)
ENDIF()
