# Find Pangolin (https://github.com/stevenlovegrove/Pangolin)
FIND_PACKAGE(Pangolin REQUIRED)
INCLUDE_DIRECTORIES(${Pangolin_INCLUDE_DIRS})
LINK_DIRECTORIES(${Pangolin_LIBRARY_DIRS})
LINK_LIBRARIES(${Pangolin_LIBRARIES})

# Find Pangolin (https://github.com/stevenlovegrove/Pangolin)
FIND_PACKAGE(SceneGraph REQUIRED)
INCLUDE_DIRECTORIES(${SceneGraph_INCLUDE_DIRS})
LINK_LIBRARIES(${SceneGraph_LIBRARIES})

MESSAGE(STATUS "${Pangolin_LIBRARY_DIRS}")
MESSAGE(STATUS "${Pangolin_LIBRARIES}")

FIND_PACKAGE(FREEGLUT)

IF(FREEGLUT_FOUND)
  INCLUDE_DIRECTORIES(${FREEGLUT_INCLUDE_DIR} )
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} )
  ADD_EXECUTABLE(SimpleDisplay main.cpp)
ENDIF()
